Review & testing fixes - print mode css was faulty - adjust print spacings - Logo needed smoother edges

--- a/src/app/components/experience-card/experience-card-task.component.scss
+++ b/src/app/components/experience-card/experience-card-task.component.scss
@@ -9,7 +9,4 @@
   &__more-link {
     font-size: 13px;
   }
-  &__print-spacer {
-
-  }
 }
